--- a/FullScreenTitleBarRepo/FullScreenTitleBarRepo.csproj
+++ b/FullScreenTitleBarRepo/FullScreenTitleBarRepo.csproj
@@ -93,17 +93,17 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddFullScreenModeButtonToTitleBarBehavior.cs" />
+    <Compile Include="FullScreenModeTitleBarBehavior.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="FullScreenTitleBar.xaml.cs">
-      <DependentUpon>FullScreenTitleBar.xaml</DependentUpon>
+    <Compile Include="FullScreenModeTitleBar.xaml.cs">
+      <DependentUpon>FullScreenModeTitleBar.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -126,13 +126,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="FullScreenTitleBar.xaml">
+    <Page Include="FullScreenModeTitleBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
